# 46755_Assignment_2

./: .gitignore  README.md  pyproject.toml
assignment_2/data/: da_prices.json  ninja_wind_55.7876_12.5378_corrected.csv  out_of_sample_load.json  wind_power.json
assignment_2/step_1/: bidding_model.py  main.py
assignment_2/step_2/: bidding_model.py  main.py
assignment_2/utils/: data_loader.py  system_imbalance_creator.py
src/assignment_2/: hello_world.py  system_imbalance.json
src/assignment_2/data/: da_prices.json  in_sample_load.json  ninja_wind_55.7876_12.5378_corrected.csv  system_imbalance.json  wind_power.json
src/assignment_2/step_1/: bidding_model.py  main.py
src/assignment_2/utils/: data_loader.py  scenario_creator.py  stochastic_load_creator.py  system_imbalance_creator.py
