[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "46755_Assignment_2"
version = "0.1.0"
description = "46755_Assignment_2 group 32"
authors = [
  { name = "Peter Mads Pedersen", email = "s214236@dtu.dk" },
  { name = "Andreas Tøffner Rosenmeier", email = "s214265@dtu.dk" },
  { name = "Gustav Heron Melhus", email = "s214260@dtu.dk" },
  { name = "Marte Kaasa Sydtveit", email = "s214237@dtu.dk" },
]
readme = "README.md"
requires-python = ">=3.13"

# Runtime dependencies
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "gurobipy",
]

# Optional groups (e.g. dev dependencies)
[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "pydocstyle",
]

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff Configuration ---
[tool.ruff]
line-length = 88
select = ["E", "W", "I", "F", "B", "ANN", "D", "UP", "TID", "N", "SIM", "ARG", "ERA", "DTZ"]
ignore = ["E501", "ANN101", "N806", "N803", "F401"]
target-version = "py313"

[tool.ruff.pydocstyle]
convention = "google"

# --- Pytest Configuration ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

# --- Mypy configuration ---
[tool.mypy]
ignore_missing_imports = true
follow_untyped_imports = true
